# bc-250-rust-governor

./: Cargo.toml  README.md  bc-250-rust-governor.service  bc250-gaming-mode.sh  cyan-skillfish-governor.service  default-config.toml
src/: governor.rs  gpu_metrics_fix.rs  main.rs  thermal.rs
